--- a/src/Pusula.InternManagement.Domain/Pusula.InternManagement.Domain.csproj
+++ b/src/Pusula.InternManagement.Domain/Pusula.InternManagement.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring.Azure" Version="7.1.1" />
     <PackageReference Include="Volo.Abp.Emailing" Version="7.1.1" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.1.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.1.1" />
