--- a/src/Pusula.InternManagement.EntityFrameworkCore/Pusula.InternManagement.EntityFrameworkCore.csproj
+++ b/src/Pusula.InternManagement.EntityFrameworkCore/Pusula.InternManagement.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Pusula.InternManagement.Application.Contracts\Pusula.InternManagement.Application.Contracts.csproj" />
     <ProjectReference Include="..\Pusula.InternManagement.Domain\Pusula.InternManagement.Domain.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="7.1.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.1.1" />
