--- a/src/Pusula.InternManagement.Web/Pusula.InternManagement.Web.csproj
+++ b/src/Pusula.InternManagement.Web/Pusula.InternManagement.Web.csproj
@@ -54,4 +54,6 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="7.1.1" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
