--- a/src/Pusula.InternManagement.Web/appsettings.json
+++ b/src/Pusula.InternManagement.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44399"
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=InternManagement;User ID=root;Password=myPassword;Include Error Detail=true;"
+    "Default": "Host=localhost;Port=5432;Database=InternManagement;User ID=postgres;Password=12345;Include Error Detail=true;"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "LWcM4vaw1Ou0Lzl5"
