Role permission settings were added in DataSeeder.

--- a/src/Pusula.InternManagement.Domain/Pusula.InternManagement.Domain.csproj
+++ b/src/Pusula.InternManagement.Domain/Pusula.InternManagement.Domain.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Pusula.InternManagement.Application.Contracts\Pusula.InternManagement.Application.Contracts.csproj" />
     <ProjectReference Include="..\Pusula.InternManagement.Domain.Shared\Pusula.InternManagement.Domain.Shared.csproj" />
   </ItemGroup>
 
