--- a/src/Pusula.InternManagement.Application.Contracts/Pusula.InternManagement.Application.Contracts.csproj
+++ b/src/Pusula.InternManagement.Application.Contracts/Pusula.InternManagement.Application.Contracts.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <RootNamespace>Pusula.InternManagement</RootNamespace>
   </PropertyGroup>
 
